made trending feature buttons

--- a/homepage.html
+++ b/homepage.html
@@ -37,13 +37,18 @@
         <div class="grid-header">
             <h3>Recently Approved or Purchased Patents</h3>
         </div>
-       <div class="trending">
+       <div>
            <img src="/resources/SK_logo.svg">
            <p>Sophie Kindel recently got the patent for her "Wubble" approved. Unanimously agreed to 
                change transportation forever
            </p>
        </div>
-       <div></div>
+       <div>
+           <img src="/resources/Apple-Logo.png">
+           <p>Apple recently sold the patent for the origincal Macintosh and made a patent for super
+               powerful batteries public 
+           </p>
+       </div>
        <div></div>
        <div></div>
     </div>
@@ -52,7 +57,6 @@
         <input type="text" name="searchbar" id="search" placeholder="Search Ideas, Profiles, and Trademarks">
         <label for="filter">Filter By:</label>
         <br>
-        <br>
         <label for="profiles">Profile</label>
         <input type="checkbox" name="profiles" id="profiles" value="profiles">
         <label for="ideas">Ideas</label>
@@ -60,23 +64,15 @@
         <label for="trademarks">Trademarks</label>
         <input type="checkbox" name="trademarks" id="trademarks" value="trademarks">
         <div class="trending">
-            <h4>Trending</h4>
-            <br>
-            <p>NFT Designs</p>
-            <br>
-            <p>StartUp Ideas</p>
-            <br>
-            <p>Cartoon Characters</p>
-            <br>
-            <p>Software Source Code</p>
-            <br>
-            <p>Inventions</p>
-            <br>
-            <p>Improvements</p>
-            <br>
-            <p>Music<p>
-            <br>
-            <p>Angel Investments</p>
+            <h3>Trending</h3>
+            <button>NFT Designs</button>
+            <button>StartUp Ideas</button>
+            <button>Cartoon Characters</button>
+            <button>Software Source Code</button>
+            <button>Inventions</button>
+            <button>Improvements</button>
+            <button>Music</button>
+            <button>Angel Investments</button>
         </div>
     </div>
   </section>
