--- a/homepage.html
+++ b/homepage.html
@@ -49,8 +49,13 @@
                powerful batteries public 
            </p>
        </div>
+       <div id="pullOut">
+           <button id="menuBtn">MENU</button>
+       </div>
        <div></div>
-       <div></div>
+    </div>
+    <div class="sidebar" id="sidebar">
+        <div></div>        
     </div>
     <div class="searchbar">
         <h3>Search IP's and Profiles</h3>
@@ -86,5 +91,6 @@
         <div>F.A.Q.</div>
         <div>My Profile</div>
   </footer>
+  <script src="app.js"></script>
 </body>
 </html>
